--- a/2006.html
+++ b/2006.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>2006½ì9°àÓ°Ïñ¼¯</title>
+<title>2006å±Š9ç­å½±åƒé›†</title>
 <style type="text/css">
 .style3 {
 	text-align: center;
@@ -15,7 +15,7 @@
 	text-align: left;
 	color: #FFFF00;
 	font-size: x-large;
-	font-family: ºÚÌå;
+	font-family: é»‘ä½“;
 }
 a:visited {
 	color: #FFFFFF;
@@ -58,12 +58,12 @@ a:hover {
 <p class="style3">&nbsp;&nbsp;&nbsp;</p>
 <p class="style32">&nbsp;</p>
 <div style="position: absolute; width: 1077px; height: 60px; z-index: 3; left: 64px; top: 32px; bottom: 414px;" id="layer6" class="style15">
-  <p><img src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">ÈÊÒåÀñÖÇĞÅ Õı´ó×Ô¹âÃ÷ &nbsp;</span>&nbsp; Ó°Ïñ¼ÇÒä£º<span class="STYLE34">2006½ì</span>&nbsp;&nbsp;&nbsp; <a href="ÌÒÀîÌìÏÂ.html">·µ»ØÇ°Ò³</a>&nbsp;&nbsp;
+  <p><img src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">ä»ä¹‰ç¤¼æ™ºä¿¡ æ­£å¤§è‡ªå…‰æ˜ &nbsp;</span>&nbsp; å½±åƒè®°å¿†ï¼š<span class="STYLE34">2006å±Š</span>&nbsp;&nbsp;&nbsp; <a href="æ¡ƒæå¤©ä¸‹.html">è¿”å›å‰é¡µ</a>&nbsp;&nbsp;
     <a href="czjszbzrsp.html"></a>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;</p>
 </div>
 <p><a>								<video  controls="controls" width="800px" height="500px" preload="metadata">
-								<source src="jpg/2006/²ÎÈüÊÓÆµ_ÎÒµÄÒ»Ìì.mp4" type="video/mp4">
+								<source src="jpg/2006/å‚èµ›è§†é¢‘_æˆ‘çš„ä¸€å¤©.mp4" type="video/mp4">
 								</video>
 </a>&nbsp;</p>
 <p>&nbsp;</p>
