--- a/index1.html
+++ b/index1.html
@@ -4,11 +4,11 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>Õı¾ıÖ®½Ì</title>
+<title>æ­£å›ä¹‹æ•™</title>
 <style type="text/css">
 .style1 {
 	color: #FFFFFF;
-	font-family: ºÚÌå;
+	font-family: é»‘ä½“;
 	font-size: xx-large;
 	text-align: left;
 	vertical-align: top;
@@ -45,7 +45,7 @@ a:hover {
 }
 .style25 {
 	color: #FFFFFF;
-	font-family: "ºÚÌå";
+	font-family: "é»‘ä½“";
 }
 .style26 {
 	text-align: center;
@@ -56,11 +56,11 @@ a:hover {
 .style28 {
 				font-size: xx-large;
 				color: #FFFFFF;
-				font-family: ºÚÌå;
+				font-family: é»‘ä½“;
 }
 .style29 {
 	font-size: xx-large;
-	font-family: "ºÚÌå";
+	font-family: "é»‘ä½“";
 }
 .style30 {
 				text-align: right;
@@ -78,7 +78,7 @@ a:hover {
 }
 .STYLE33 {
 	font-size: x-large;
-	font-family: "ºÚÌå";
+	font-family: "é»‘ä½“";
 	font-weight: bold;
 	text-decoration: none;
 }
@@ -131,7 +131,7 @@ body {
 <body style="margin: 6px; background-color: #33CC33;">
 
 <div style="position: absolute; width: 442px; height: 83px; z-index: 8; left: 121px; top: 322px" id="layer6" class="style21">
-	<p><span class="style29"><a class="btn-default" href="20208/8°à°ËÉÏÖÜÖ¾.html">°à¼¶ÖÜÖ¾</a>&nbsp;<a class="btn-default" href="czjszsz.html">½ÌÓıµãµÎ</a>&nbsp;<a class="btn-default" href="ÌÒÀîÌìÏÂ.html">ÌÒÀî·Ò·¼</a><br />
+	<p><span class="style29"><a class="btn-default" href="20208/8ç­å…«ä¸Šå‘¨å¿—.html">ç­çº§å‘¨å¿—</a>&nbsp;<a class="btn-default" href="czjszsz.html">æ•™è‚²ç‚¹æ»´</a>&nbsp;<a class="btn-default" href="æ¡ƒæå¤©ä¸‹.html">æ¡ƒæèŠ¬èŠ³</a><br />
     </span>
 	  <br />
 	</p>
@@ -141,12 +141,12 @@ body {
 <p>&nbsp;</p>
 <div style="position: absolute; width: 386px; height: 125px; z-index: 1; left: 117px; top: 42px" id="layer1" class="style1">
   <div style="position: absolute; left: 128px; float: left; font-size=xx-large;background-color: darkgreen; top: 9px; height: 100px; font-size: 28px; width: 240px; text-align: center; line-height: 10px">
-    <p>¿ª Ñ§ Ñø Õı</p>
-    <p> ÕÑ Ã÷ ÓĞ ÈÚ</p>
+    <p>å¼€ å­¦ å…» æ­£</p>
+    <p> æ˜­ æ˜ æœ‰ è</p>
   </div>
   <div style="position: absolute; left: 13px; float: left; font-size=xx-large;background-color: opacity; top: 7px; height: 98px; width: 116px; font-size: 25px; width: 108px; text-align: center; border: medium solid white; line-height: 10px">
-    <p>Õı ¾ı</p>
-    <p>Ö® ½Ì</p>
+    <p>æ­£ å›</p>
+    <p>ä¹‹ æ•™</p>
   </div>
 </div>
 
@@ -156,8 +156,8 @@ body {
 <p>&nbsp;</p>
 <div style="position: absolute; width: 456px; height: 100px; z-index: 11; left: 122px; top: 188px" id="layer9">
   <div align="left"><a href="czjszbzr.html"><img src="czj5.png" width="100" height="100" class="style2" /></a><a href="czjszbzr.html" class="style27"></a>
-    <div id="Layer1"><a href="czjszbzr.html" class="style27"><span class="STYLE33">ÉîÛÚÊĞ³ÂÕı¾ıÃû°àÖ÷ÈÎ¹¤×÷ÊÒ</span></a><br />
-     <span style="font-family: 'ºÚÌå'; font-size: 14px; text-align: left; color: aliceblue">£¨µÚ¶şÅúÃû°àÖ÷³ÖÈË£¬½¨ÉèÖÜÆÚ£º2019-2021£©</span></div>
+    <div id="Layer1"><a href="czjszbzr.html" class="style27"><span class="STYLE33">æ·±åœ³å¸‚é™ˆæ­£å›åç­ä¸»ä»»å·¥ä½œå®¤</span></a><br />
+     <span style="font-family: 'é»‘ä½“'; font-size: 14px; text-align: left; color: aliceblue">ï¼ˆç¬¬äºŒæ‰¹åç­ä¸»æŒäººï¼Œå»ºè®¾å‘¨æœŸï¼š2019-2021ï¼‰</span></div>
   </div>
 </div>                                  
 <a href="czjszbzr.html" class="style27"></a>
@@ -167,9 +167,9 @@ body {
 <p align="left" class="style29" style="width: 1129px">&nbsp;</p>
 <p align="left" class="style29" style="width: 1129px">&nbsp;</p>
 <p align="left" class="style29" style="width: 1129px">&nbsp;</p>
-<p><span class="style25">ÉîÛÚÖĞÑ§<span lang="en-us" xml:lang="en-us"> </span> ³ÂÕı¾ı&nbsp; zjchen<span lang="en-us" xml:lang="en-us">@</span>shenzhong<span lang="en-us" xml:lang="en-us">.</span>net<span lang="en-us" xml:lang="en-us">&nbsp;</span><br />
-  ÔÁICP±¸07072088ºÅ£¨2007-2023Äê£©<br />
-  <img src="±¸°¸Í¼±ê.png" width="20" height="20" /></span><a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44030302000900" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">ÔÁ¹«Íø°²±¸ 44030302000900ºÅ</a></p>
+<p><span class="style25">æ·±åœ³ä¸­å­¦<span lang="en-us" xml:lang="en-us"> </span> é™ˆæ­£å›&nbsp; zjchen<span lang="en-us" xml:lang="en-us">@</span>shenzhong<span lang="en-us" xml:lang="en-us">.</span>net<span lang="en-us" xml:lang="en-us">&nbsp;</span><br />
+  ç²¤ICPå¤‡07072088å·ï¼ˆ2007-2023å¹´ï¼‰<br />
+  <img src="å¤‡æ¡ˆå›¾æ ‡.png" width="20" height="20" /></span><a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44030302000900" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">ç²¤å…¬ç½‘å®‰å¤‡ 44030302000900å·</a></p>
 <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; ">&nbsp;</p>
 </body>
 
