--- a/2009.html
+++ b/2009.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>2009½ì12°àÓ°Ïñ¼¯</title>
+<title>2009å±Š12ç­å½±åƒé›†</title>
 <style type="text/css">
 .style3 {
 	text-align: center;
@@ -15,7 +15,7 @@
 	text-align: left;
 	color: #FFFF00;
 	font-size: x-large;
-	font-family: ºÚÌå;
+	font-family: é»‘ä½“;
 }
 a:visited {
 	color: #FFFFFF;
@@ -58,7 +58,7 @@ a:hover {
 <p class="style3">&nbsp;&nbsp;&nbsp;</p>
 <p class="style32">&nbsp;</p>
 <div style="position: absolute; width: 1077px; height: 60px; z-index: 3; left: 64px; top: 32px; bottom: 414px;" id="layer6" class="style15">
-  <p><img src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">ÈÊÒåÀñÖÇĞÅ Õı´ó×Ô¹âÃ÷ &nbsp;</span>&nbsp;&nbsp;<span class="STYLE34">2009½ì12°à</span>&nbsp;&nbsp; <a href="ÌÒÀîÌìÏÂ.html">·µ»ØÇ°Ò³</a>&nbsp;&nbsp;
+  <p><img src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">ä»ä¹‰ç¤¼æ™ºä¿¡ æ­£å¤§è‡ªå…‰æ˜ &nbsp;</span>&nbsp;&nbsp;<span class="STYLE34">2009å±Š12ç­</span>&nbsp;&nbsp; <a href="æ¡ƒæå¤©ä¸‹.html">è¿”å›å‰é¡µ</a>&nbsp;&nbsp;
     <a href="czjszbzrsp.html"></a>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;</p>
 </div>
