--- a/2012.html
+++ b/2012.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>2012½ì12°àÓ°Ïñ¼¯</title>
+<title>2012å±Š12ç­å½±åƒé›†</title>
 <style type="text/css">
 .style3 {
 	text-align: center;
@@ -15,7 +15,7 @@
 	text-align: left;
 	color: #FFFF00;
 	font-size: x-large;
-	font-family: ºÚÌå;
+	font-family: é»‘ä½“;
 }
 a:visited {
 	color: #FFFFFF;
@@ -58,12 +58,12 @@ a:hover {
 <p class="style3">&nbsp;&nbsp;&nbsp;</p>
 <p class="style32">&nbsp;</p>
 <div style="position: absolute; width: 1077px; height: 60px; z-index: 3; left: 64px; top: 32px; bottom: 414px;" id="layer6" class="style15">
-  <p><img src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">ÈÊÒåÀñÖÇĞÅ Õı´ó×Ô¹âÃ÷ &nbsp;</span>&nbsp;&nbsp;Ó°Ïñ¼ÇÒä£º<span class="STYLE34">2012½ì12°à</span>&nbsp;&nbsp; <a href="ÌÒÀîÌìÏÂ.html">·µ»ØÇ°Ò³</a>&nbsp;&nbsp;
+  <p><img src="a.jpg" width="125" height="125" />&nbsp;<span class="style22">ä»ä¹‰ç¤¼æ™ºä¿¡ æ­£å¤§è‡ªå…‰æ˜ &nbsp;</span>&nbsp;&nbsp;å½±åƒè®°å¿†ï¼š<span class="STYLE34">2012å±Š12ç­</span>&nbsp;&nbsp; <a href="æ¡ƒæå¤©ä¸‹.html">è¿”å›å‰é¡µ</a>&nbsp;&nbsp;
     <a href="czjszbzrsp.html"></a>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;</p>
 </div>
 <p align="left"><br />
-  <img src="jpg/2012/20220730.jpg" width="600" height="432" />20220730£¨±ÏÒµÊ®ÄêĞ¡¾Û£©<br />
+  <img src="jpg/2012/20220730.jpg" width="600" height="432" />20220730ï¼ˆæ¯•ä¸šåå¹´å°èšï¼‰<br />
   <br />
   <br />
 <img src="jpg/2012/20220503.jpg" width="600" height="450" />20220503</p>
