--- a/czjszbzr.html
+++ b/czjszbzr.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>ÉîÛÚÊĞ³ÂÕı¾ıÃû°àÖ÷ÈÎ¹¤×÷ÊÒ</title>
+<title>æ·±åœ³å¸‚é™ˆæ­£å›åç­ä¸»ä»»å·¥ä½œå®¤</title>
 <style type="text/css">
 .style3 {
 	text-align: center;
@@ -15,7 +15,7 @@
 	text-align: left;
 	color: #FFFF00;
 	font-size: x-large;
-	font-family: ºÚÌå;
+	font-family: é»‘ä½“;
 }
 a:visited {
 	color: #FFFFFF;
@@ -142,22 +142,22 @@ a:hover {
 <p class="style32">&nbsp;</p>
 <p class="style32">&nbsp;</p>
 <p class="style32">&nbsp;</p>
-<div id="Layer3"><img src="jpg/¹¤×÷ÊÒ/Éî´´ÕÅİÍ.jpg" width="134" height="176" /></div>
-<div id="Layer8"><img src="jpg/¹¤×÷ÊÒ/¿×ÏéÔ¨µ¼Ê¦.jpg" width="134" height="176" /></div>
-<p class="style3"><img src="jpg/¹¤×÷ÊÒ/¹¤×÷ÊÒÈËÔ±·Ö²¼Í¼.jpg" width="922" height="634" /></p>
-<div id="Layer10"><img src="jpg/¹¤×÷ÊÒ/ÉîÖĞ½ğ³¯Ñô.jpg" width="134" height="176" /><img src="jpg/¹¤×÷ÊÒ/ÉîÖĞ³õÖĞÁõÔª.jpg" width="134" height="176" /><img src="jpg/¹¤×÷ÊÒ/ÉîÖĞÅí¿­.jpg" width="134" height="176" /></div>
-<div id="Layer7"><img src="jpg/¹¤×÷ÊÒ/¶şÊµ³Âê¿.jpg" width="134" height="176" /></div>
-<div id="Layer6"><img src="jpg/¹¤×÷ÊÒ/ÑÇµÏ³Â°ØÁº.jpg" width="134" height="176" /></div>
-<div id="Layer4"><img src="jpg/¹¤×÷ÊÒ/±¦ÁúÎ×ÀÏÊ¦.jpg" width="134" height="176" /></div>
-<div id="Layer2"><img src="jpg/¹¤×÷ÊÒ/Éî´ó¸½ÖĞÄôÀÏÊ¦.jpg" width="134" height="176" /></div>
-<div id="Layer1"><img src="jpg/¹¤×÷ÊÒ/ÓıĞÂÃ«ÎäÒã.jpg" width="134" height="176" /></div>
-<div id="Layer5"><img src="jpg/¹¤×÷ÊÒ/ÆºÍâ³Â»Û¾ı.jpg" width="134" height="176" /></div>
-<div id="Layer9"><img src="jpg/¹¤×÷ÊÒ/ÊµÑéÓàÃ÷·¢.jpg" width="134" height="176" /></div>
+<div id="Layer3"><img src="jpg/å·¥ä½œå®¤/æ·±åˆ›å¼ èƒ.jpg" width="134" height="176" /></div>
+<div id="Layer8"><img src="jpg/å·¥ä½œå®¤/å­”ç¥¥æ¸Šå¯¼å¸ˆ.jpg" width="134" height="176" /></div>
+<p class="style3"><img src="jpg/å·¥ä½œå®¤/å·¥ä½œå®¤äººå‘˜åˆ†å¸ƒå›¾.jpg" width="922" height="634" /></p>
+<div id="Layer10"><img src="jpg/å·¥ä½œå®¤/æ·±ä¸­é‡‘æœé˜³.jpg" width="134" height="176" /><img src="jpg/å·¥ä½œå®¤/æ·±ä¸­åˆä¸­åˆ˜å…ƒ.jpg" width="134" height="176" /><img src="jpg/å·¥ä½œå®¤/æ·±ä¸­å½­å‡¯.jpg" width="134" height="176" /></div>
+<div id="Layer7"><img src="jpg/å·¥ä½œå®¤/äºŒå®é™ˆæ˜•.jpg" width="134" height="176" /></div>
+<div id="Layer6"><img src="jpg/å·¥ä½œå®¤/äºšè¿ªé™ˆæŸæ¢.jpg" width="134" height="176" /></div>
+<div id="Layer4"><img src="jpg/å·¥ä½œå®¤/å®é¾™å·«è€å¸ˆ.jpg" width="134" height="176" /></div>
+<div id="Layer2"><img src="jpg/å·¥ä½œå®¤/æ·±å¤§é™„ä¸­è‚è€å¸ˆ.jpg" width="134" height="176" /></div>
+<div id="Layer1"><img src="jpg/å·¥ä½œå®¤/è‚²æ–°æ¯›æ­¦æ¯….jpg" width="134" height="176" /></div>
+<div id="Layer5"><img src="jpg/å·¥ä½œå®¤/åªå¤–é™ˆæ…§å›.jpg" width="134" height="176" /></div>
+<div id="Layer9"><img src="jpg/å·¥ä½œå®¤/å®éªŒä½™æ˜å‘.jpg" width="134" height="176" /></div>
 <p class="style3">&nbsp;&nbsp;&nbsp;</p>
-<div id="Layer11"><img src="jpg/¹¤×÷ÊÒ/³ÂÕı¾ı.jpg" width="134" height="176" /></div>
+<div id="Layer11"><img src="jpg/å·¥ä½œå®¤/é™ˆæ­£å›.jpg" width="134" height="176" /></div>
 <p class="style32">&nbsp;</p>
 <div style="position: absolute; width: 1192px; height: 60px; z-index: 3; left: 24px; top: 32px; bottom: 414px;" id="layer6" class="style15">
-&nbsp;<img src="czj5.jpg" width="106" height="104" />&nbsp;&nbsp;<span class="style22"><span class="style26">ÉîÛÚÊĞ³ÂÕı¾ıÃû°àÖ÷ÈÎ¹¤×÷ÊÒ</span>&nbsp;</span>&nbsp;<a href="czjszbzrsj.html">´óÊÂ¼Ç</a>&nbsp;&nbsp;<a href="czjszbzrzc.html">Ö÷³ÖÈË</a>&nbsp; <a href="czjszbzrtu.html">Í¼Æ¬</a>&nbsp;<a href="czjszbzrjb.html">¼ò±¨</a>&nbsp;<a href="czjszbzrsp.html">ÊÓÆµ</a>&nbsp; <a href="index.html">·µ»ØÊ×Ò³</a></div>
+&nbsp;<img src="czj5.jpg" width="106" height="104" />&nbsp;&nbsp;<span class="style22"><span class="style26">æ·±åœ³å¸‚é™ˆæ­£å›åç­ä¸»ä»»å·¥ä½œå®¤</span>&nbsp;</span>&nbsp;<a href="czjszbzrsj.html">å¤§äº‹è®°</a>&nbsp;&nbsp;<a href="czjszbzrzc.html">ä¸»æŒäºº</a>&nbsp; <a href="czjszbzrtu.html">å›¾ç‰‡</a>&nbsp;<a href="czjszbzrjb.html">ç®€æŠ¥</a>&nbsp;<a href="czjszbzrsp.html">è§†é¢‘</a>&nbsp; <a href="index.html">è¿”å›é¦–é¡µ</a></div>
 <p class="style32">&nbsp;</p>
 <p class="style3">&nbsp;</p>
 <p class="style3">&nbsp;</p>
