--- a/czjszbzrsp.html
+++ b/czjszbzrsp.html
@@ -4,13 +4,13 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn" />
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>ÉîÛÚÊĞ³ÂÕı¾ıÃû°àÖ÷ÈÎ¹¤×÷ÊÒ</title>
+<title>æ·±åœ³å¸‚é™ˆæ­£å›åç­ä¸»ä»»å·¥ä½œå®¤</title>
 <style type="text/css">
 .style15 {
 	text-align: left;
 	color: #FFFF00;
 	font-size: x-large;
-	font-family: ºÚÌå;
+	font-family: é»‘ä½“;
 }
 a:visited {
 	color: #FFFFFF;
@@ -39,7 +39,7 @@ a:hover {
 				font-size: x-large;
 				color: #FFFFFF;
 				text-align: center;
-				font-family: ¿¬Ìå;
+				font-family: æ¥·ä½“;
 }
 .style34 {
 				text-align: center;
@@ -59,9 +59,9 @@ a:hover {
 <table style="width: 100%">
 				<tr>
 								<td class="style33" style="width: 382px">
-								20190411ÕÅİÍÀÏÊ¦¸Ğ¶÷Ö÷Ìâ°à»á</td>
-								<td class="style33">20190411Ê¢ºéÀÏÊ¦¸Ğ¶÷Ö÷Ìâ°à»á&nbsp; </td>
-								<td class="style33">20190411Í¬¿ÎÒì¹¹»î¶¯»Ø·Å</td>
+								20190411å¼ èƒè€å¸ˆæ„Ÿæ©ä¸»é¢˜ç­ä¼š</td>
+								<td class="style33">20190411ç››æ´ªè€å¸ˆæ„Ÿæ©ä¸»é¢˜ç­ä¼š&nbsp; </td>
+								<td class="style33">20190411åŒè¯¾å¼‚æ„æ´»åŠ¨å›æ”¾</td>
 				</tr>
 				<tr>
 								<td class="style34" style="width: 382px">
@@ -78,7 +78,7 @@ a:hover {
 								<source src="shenghong.ogg" type="video/ogg">
 								</video></a></td>
 								<td class="style34">
-								<img src="jpg/¹¤×÷ÊÒ/¹¤×÷ÊÒ4.jpg" width="333" height="250" /></td>
+								<img src="jpg/å·¥ä½œå®¤/å·¥ä½œå®¤4.jpg" width="333" height="250" /></td>
 				</tr>
 				<tr>
 								<td style="width: 382px" class="style34">&nbsp;</td>
@@ -87,18 +87,18 @@ a:hover {
 				</tr>
 				<tr>
 								<td style="width: 382px" class="style33">
-								20190312 9°à¸Ğ¶÷Ö÷Ìâ°à»á</td>
-								<td class="style33">20190323&nbsp; 9°à¸£ÀûÖĞĞÄ»î¶¯</td>
+								20190312 9ç­æ„Ÿæ©ä¸»é¢˜ç­ä¼š</td>
+								<td class="style33">20190323&nbsp; 9ç­ç¦åˆ©ä¸­å¿ƒæ´»åŠ¨</td>
 								<td class="style33">20190410 
-								<a href="http://cdn.ndszgb.com/dianwang/jydjs/20190411.mp4">ÄÏ¶¼ÃûÊ¦ÖĞ¿¼±¸¿¼¹«ÒæÖ±²¥</a></td>
+								<a href="http://cdn.ndszgb.com/dianwang/jydjs/20190411.mp4">å—éƒ½åå¸ˆä¸­è€ƒå¤‡è€ƒå…¬ç›Šç›´æ’­</a></td>
 				</tr>
 				<tr>
 								<td style="width: 382px" class="style34">
-								<img src="jpg/2019/°à155.jpg" width="350" height="233" /></td>
+								<img src="jpg/2019/ç­155.jpg" width="350" height="233" /></td>
 								<td class="style34">
-								<img src="jpg/2019/°à162.jpg" width="350" height="233" /></td>
+								<img src="jpg/2019/ç­162.jpg" width="350" height="233" /></td>
 								<td class="style34">
-								<img src="jpg/¹¤×÷ÊÒ/¹¤×÷ÊÒ0410.jpg" width="333" height="250" /></td>
+								<img src="jpg/å·¥ä½œå®¤/å·¥ä½œå®¤0410.jpg" width="333" height="250" /></td>
 				</tr>
 				<tr>
 								<td style="width: 382px" class="style34">&nbsp;
@@ -109,7 +109,7 @@ a:hover {
 				</tr>
 				<tr>
 								<td style="width: 382px" class="style33">
-								201710³ÂÕı¾ı±ÈÈüÖ÷Ìâ°à»áÉè¼Æ</td>
+								201710é™ˆæ­£å›æ¯”èµ›ä¸»é¢˜ç­ä¼šè®¾è®¡</td>
 								<td class="style34">&nbsp;
 								</td>
 								<td class="style34">&nbsp;</td>
@@ -123,17 +123,17 @@ a:hover {
 				</tr>
 				<tr>
 								<td style="width: 382px" class="style34">
-								<a href="http://www.shenzhong.net">ÉîÛÚÖĞÑ§</a></td>
+								<a href="http://www.shenzhong.net">æ·±åœ³ä¸­å­¦</a></td>
 								<td class="style34">
-								<a href="http://www.czj3.net/">Õı¾ıÖ®½Ì</a></td>
-								<td class="style34">ÉîÖĞ³õÖĞ</td>
+								<a href="http://www.czj3.net/">æ­£å›ä¹‹æ•™</a></td>
+								<td class="style34">æ·±ä¸­åˆä¸­</td>
 				</tr>
 				<tr>
 								<td style="width: 382px" class="style34">
-								<img src="ÉîÛÚÖĞÑ§¸ßÖĞ²¿Î¢ĞÅÍ¼Æ¬.jpg" width="101" height="101" /></td>
-								<td class="style34"><img src="Õı¾ıÖ®½ÌÎ¢ĞÅ¶şÎ¬Âë.jpg" width="101" height="101" /></td>
+								<img src="æ·±åœ³ä¸­å­¦é«˜ä¸­éƒ¨å¾®ä¿¡å›¾ç‰‡.jpg" width="101" height="101" /></td>
+								<td class="style34"><img src="æ­£å›ä¹‹æ•™å¾®ä¿¡äºŒç»´ç .jpg" width="101" height="101" /></td>
 								<td class="style34">
-								<img src="ÉîÖĞ³õÖĞ²¿Î¢ĞÅÍ¼Æ¬.bmp" width="101" height="101" /></td>
+								<img src="æ·±ä¸­åˆä¸­éƒ¨å¾®ä¿¡å›¾ç‰‡.bmp" width="101" height="101" /></td>
 				</tr>
 				<tr>
 								<td style="width: 382px">&nbsp;</td>
@@ -142,14 +142,14 @@ a:hover {
 				</tr>
 				<tr>
 								<td style="width: 382px">&nbsp;</td>
-								<td class="style33">¿ªÑ§ÑøÕı&nbsp; ÕÑÃ÷ÓĞÈÚ</td>
+								<td class="style33">å¼€å­¦å…»æ­£&nbsp; æ˜­æ˜æœ‰è</td>
 								<td>&nbsp;</td>
 				</tr>
 </table>
 <div style="position: absolute; width: 1199px; height: 60px; z-index: 3; left: 17px; top: 34px; bottom: 390px;" id="layer6" class="style15">
-&nbsp;<a href="czjszbzr.html"><img src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">ÉîÛÚÊĞ³ÂÕı¾ıÃû°àÖ÷ÈÎ¹¤×÷ÊÒ¡ª¡ª<span class="STYLE36">ÊÓÆµ</span></span></span>&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="czjszbzrsj.html">´óÊÂ¼Ç</a>&nbsp;<a href="czjszbzrzc.html">Ö÷³ÖÈË</a>&nbsp;<a href="czjszbzrtu.html"> 
-Í¼Æ¬</a>&nbsp;<a href="czjszbzr.html">·µ»Ø</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
+&nbsp;<a href="czjszbzr.html"><img src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">æ·±åœ³å¸‚é™ˆæ­£å›åç­ä¸»ä»»å·¥ä½œå®¤â€•â€•<span class="STYLE36">è§†é¢‘</span></span></span>&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="czjszbzrsj.html">å¤§äº‹è®°</a>&nbsp;<a href="czjszbzrzc.html">ä¸»æŒäºº</a>&nbsp;<a href="czjszbzrtu.html"> 
+å›¾ç‰‡</a>&nbsp;<a href="czjszbzr.html">è¿”å›</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
 
 </body>
 
